<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">YourNameWidget</string>
    <string name="app_name_lib">YOUR AGE</string>

    <string name="txt_info">"Now you have to add one of the widgets to your homescreen."</string>
    <string name="txt_info_1">"You will find them in your widgets list."</string>
    <string name="txt_ok">Ok</string>
    
    <string name="txt_configuration_title">Configuration</string>
    <string name="txt_date_of_birth">DATE OF BIRTH</string>
    <string name="txt_time_of_birth">TIME OF BIRTH</string>
    <string name="txt_what_to_show">FORMAT</string>
    <string name="txt_invalid_birth_date">"Invalid birth date. Are you from future?"</string>
    <string name="txt_invalid_checkboxes">"You must check at least one format to proceed."</string>
    <string name="txt_too_many_selected">Only %1$d checkboxes can be selected</string>
    <string name="txt_make_background_transparent">Make background transparent</string>
    
    <string name="txt_widget_text_settings">TEXT SETTINGS</string>
    <string name="txt_widget_background_settings">BACKGROUND SETTINGS</string>
    <string name="txt_is_gradient">Is gradient</string>
    <string name="txt_with_border">With border</string>
    <string name="txt_border_color">Border color</string>
    <string name="txt_with_corner">With round corner</string>
    
    <string name="txt_years">YEARS</string>
    <string name="txt_year">YEAR</string>
    <string name="txt_days">DAYS</string>
    <string name="txt_day">DAY</string>
    <string name="txt_months">MONTHS</string>
    <string name="txt_month">MONTH</string>
    <string name="txt_hours">HOURS</string>
    <string name="txt_hour">HOUR</string>
    <string name="txt_weeks">WEEKS</string>
    <string name="txt_week">WEEK</string>
    
    <string name="txt_you_live">YOU LIVE</string>
    <string name="txt_your_birthday_in">TIME TO YOUR BIRTHDAYS</string>
    <string name="txt_need_to_be_oldest">TIME TO BE THE OLDEST MAN</string>
    <string name="txt_facts">FACTS</string>
    
    <string name="oldest_person_was">The oldest person was Jeanne Calment and she lived for</string>
    <string name="average_age_man">The average age for man is</string>
    <string name="average_age_women">The average age for women is</string>
    
    <string name="widget_label_minimal">Age Widget 1x1</string>
    <string name="widget_label_small">Age Widget 2x1</string>
    <string name="widget_label_medium">Age Widget 3x1</string>
    <string name="widget_label_large">Age Widget 4x1</string>
    <string name="widget_label">Age Widget</string>
    
    <string name="txt_numbers_colors">Numbers color</string>
    <string name="txt_numbers_shadow_colors">Numbers shadow color</string>
    
    <string name="txt_texts_colors">Texts color</string>
    <string name="txt_texts_shadow_colors">Texts shadow color</string>
    
    <string name="txt_orientation">Orientation</string>
    <string name="txt_start_color">Start color</string>
    <string name="txt_middle_color">Middle color</string>
    <string name="txt_end_color">End color</string>
    <string name="txt_color">Color</string>
    
    <string name="txt_set">Set</string>
    <string name="txt_cancel">Cancel</string>
    
    <string name="format_hours">"%1$d"</string>
    <string name="format_days">"%1$d"</string>
    <string name="format_days_hours">"%1$d %2$d"</string>

    
    <string-array name="fragments">
        <item>Info</item>
        <item>Config</item>
    </string-array>
    
    <string-array name="orientations">
        <item>Top -> Bottom</item>
        <item>Bottom -> Top</item>
        <item>Left -> Right</item>
        <item>Right -> Left</item>
    </string-array>
</resources>