<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
	        style="@style/greenTextStyle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_you_live" />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >
            <TextView 
                android:id="@+id/tv_years"
                style="@style/formatStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="5dp"
                />
            <TextView 
                android:id="@+id/tv_type_years"
                style="@style/typeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_gravity="bottom"
                android:text="@string/txt_year"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView 
                android:id="@+id/tv_months"
                style="@style/formatStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:gravity="right"/>
            <TextView 
                android:id="@+id/tv_type_months"
                style="@style/typeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_gravity="bottom"
                android:text="@string/txt_month"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView 
                android:id="@+id/tv_weeks"
                style="@style/formatStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:gravity="right"/>
            <TextView 
                android:id="@+id/tv_type_weeks"
                style="@style/typeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_gravity="bottom"
                android:text="@string/txt_week"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView 
                android:id="@+id/tv_days"
                style="@style/formatStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:gravity="right"/>
            <TextView 
                android:id="@+id/tv_type_days"
                style="@style/typeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_gravity="bottom"
                android:text="@string/txt_day"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView 
                android:id="@+id/tv_hours"
                style="@style/formatStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:gravity="right"/>
            <TextView 
                android:id="@+id/tv_type_hours"
                style="@style/typeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_gravity="bottom"
                android:text="@string/txt_hour"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>